[project]
name = "sandbox-connection-pool"
version = "0.1.0"
description = ""
authors = [
    {name = "hamm-shark",email = "vadim.backend@ulta.team"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "psycopg-binary (>=3.3.4,<4.0.0)",
    "psycopg (>=3.3.4,<4.0.0)",
    "greenlet (>=3.5.2,<4.0.0)",
    "faker (>=40.23.0,<41.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "pandas-stubs (>=3.0.3.260530,<4.0.0.0)",
]

[dependency-groups]
dev = [
    "pre-commit (>=4.6.0,<5.0.0)",
    "ruff (>=0.15.18,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["src"]
lint.select = [
    "FAST", "ASYNC", "ANN", "S", "B", "A", "C4",
    "T10", "EM", "EXE", "ISC", "ICN", "INP", "PIE", "T20", "PYI", "Q", "RSE", "RET", "SLF", "SIM", "SLOT", "TID",
    "TC", "ARG", "PTH", "FLY", "I", "NPY", "PD", "N", "PERF", "E", "W", "F", "PLC", "PLE", "PLR", "PLW", "UP", "FURB",
    "LOG",
    "RUF",
]
lint.ignore = ["RUF100", "PLR0913", "ANN401", "S608", "S324"]
lint.fixable = ["ALL"]
lint.unfixable = []
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
lint.allowed-confusables = ["а", "А", "б", "Б", "в", "В", "г", "Г", "е", "Е", "з", "З", "и", "И", "к", "К", "м", "М", "н", "Н", "о", "О", "р", "Р", "с", "С", "у", "У", "ф", "Ф", "х", "Х"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "src/infra/postgres/migrations",
]
line-length = 120
target-version = "py312"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["src"]
